# 0xMux

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  README.zh.md  claude.md  package-lock.json  package.json  playwright.config.ts  test-termui.sh
.claude/: CLAUDE.md  ralph-loop-task.md
.claude/agents/: parallel-research.md  swift-utility-writer.md
.claude/commands/: add-note-to-blinko.md  analyze-bundle-size.md  commit-pr.md  commit.md  edit-pr.md  figma-ui-render.md  ios-review.md  kanban-task.md  list-my-issues.md  review-pr.md
.claude/prompts/: composable-panes-refactor.md
.claude/state/: architecture-audit.md  current-task.md  refactor-discovery.md  refactor-phase1.md  refactor-phase2.md  refactor-phase3.md
.github/workflows/: release.yml
agent/: Cargo.toml
agent/src/: lib.rs  types.rs
agent/src/browser/: mod.rs  playwright.rs  types.rs
agent/src/cron/: executor.rs  mod.rs  service.rs  store.rs  types.rs
agent/src/desktop/: command.rs  coordinate.rs  display.rs  input.rs  keys.rs  mod.rs  screenshot.rs
agent/src/desktop/ui_tree/: macos.rs  mod.rs  ref_manager.rs  windows_impl.rs
agent/src/desktop/window/: macos.rs  mod.rs  windows.rs
ai/mcp/: registry.toml
docs/: PRODUCT.md
homebrew/Formula/: 0xmux.rb
npm/0xmux/: package.json
npm/0xmux-computer/: README.md  package-lock.json  package.json
scripts/: dev-clean.sh  dev.sh
server/: Cargo.toml
server/src/: banner.rs  config.rs  error.rs  main.rs  router.rs  state.rs  static_files.rs  tmux.rs
server/src/handlers/: agent.rs  agent_browser.rs  agent_cron.rs  ai.rs  auth.rs  files.rs  git.rs  github.rs  health.rs  layout.rs  mod.rs  notification.rs  session.rs  system.rs  termui.rs  upload.rs  window.rs
server/src/middleware/: auth.rs
server/src/models/: ai.rs  files.rs  git.rs  github.rs  mod.rs  pty.rs  session.rs  system.rs  window.rs
server/src/services/: ai_sync.rs  auth_service.rs  config_store.rs  fs.rs  git.rs  github.rs  install.rs  mod.rs  notification.rs  search.rs  system.rs  tmux.rs  updater.rs  workspace.rs
server/src/utils/: mime.rs
server/src/ws/: file_watcher.rs  install.rs  mod.rs  mux.rs  pty.rs  sessions.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
(+189 files in other folders)
