[package]
name = "oxmux-agent"
version = "0.1.0"
edition = "2024"
description = "AI Agent desktop automation module for 0xMux"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.6"
xcap = "0.8"
tokio-cron-scheduler = "0.15"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
image = "0.25"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
] }
