[package]
name = "oxmux-server"
version = "0.7.1"
edition = "2024"
description = "0xMux - Hacker-grade tmux session manager with web UI"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
which = "6.0"
uuid = { version = "1", features = ["v4"] }
regex = "1"
portable-pty = "0.9"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rust-embed = { version = "8.5", features = ["axum", "mime-guess", "include-exclude"], optional = true }
mime_guess = { version = "2.0", optional = true }
infer = "0.16"
home = "0.5"
trash = "5"

# Password hashing & auth
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
toml = "0.8"

# Agent module (optional)
oxmux-agent = { path = "../agent", optional = true }

[features]
embed-frontend = ["rust-embed", "mime_guess"]
agent = ["dep:oxmux-agent"]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
